<resources>
    <string name="app_name">Muebles 2000 FS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start">Inicio</string>
    <string name="template">Plantilla</string>
    <string name="rating">Clasificación</string>
    <string name="calendar">Calendario</string>
    <string name="follow_us">Síguenos</string>
    <string name="contributors">Colaboradores</string>
    <string name="contact">Contacto</string>
    <string name="who_we_are">Quienes somos</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_contributors">ContributorsActivity</string>
    <string name="title_activity_siguenos">SiguenosActivity</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="Instagram">Instagram</string>
    <string name="title_activity_contacto">ContactoActivity</string>
    <string name="subject">Asunto</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>
    <string name="send_email">Enviar email...</string>
    <string name="no_clients_email_installed">No tienes clientes email instalados.</string>
    <string name="error_empty_message">El campo mensaje no puede estar vacío</string>
    <string name="error_empty_subject">El campo subject no puede estar vacío</string>
    <string name="see_map">Ver mapa</string>
    <string name="navegation">Como llegar</string>
    <string name="title_activity_template">TemplateActivity</string>
</resources>
