<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/menu_start"
        android:background="@drawable/item_selector">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:src="@drawable/ic_home"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/textView1"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/menu_template"
        android:background="@drawable/item_selector">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_template"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/template"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/menu_rating"
        android:background="@drawable/item_selector">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@drawable/ic_rating"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/menu_calendar"
        android:background="@drawable/item_selector">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/ic_calendar"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/menu_who_we_are"
        android:background="@drawable/item_selector">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@drawable/ic_who_we_are"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/who_we_are"
            android:id="@+id/txt_who_we_are"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/menu_contact"
        android:background="@drawable/item_selector">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_contact"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:id="@+id/txt_contact"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/menu_follow_us"
        android:background="@drawable/item_selector">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/ic_follow_us"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/follow_us"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/menu_contributors"
        android:background="@drawable/item_selector">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/ic_colaborators"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contributors"
            android:id="@+id/txt_contributors"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical" />

    </LinearLayout>



</LinearLayout>