<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/template"
            android:scaleType="centerCrop"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_above="@+id/content_txt_template"/>
        <View
            android:id="@+id/separator_template"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_alignParentBottom="true"/>
        <LinearLayout
            android:id="@+id/content_txt_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:layout_above="@+id/separator_template">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/template"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:gravity="center"
                android:padding="5dp"/>
        </LinearLayout>

        <View
            android:id="@+id/btn_template"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cell_selector" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rating"
                android:scaleType="centerCrop"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_above="@+id/content_txt_rating"/>
            <View
                android:id="@+id/separator_rating"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_alignParentBottom="true"/>
            <LinearLayout
                android:id="@+id/content_txt_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_light"
                android:layout_above="@+id/separator_rating">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:padding="5dp"/>
            </LinearLayout>
            <View
                android:id="@+id/btn_rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_selector" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/calendar"
                android:scaleType="centerCrop"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_above="@+id/content_txt_calendar"/>
            <View
                android:id="@+id/separator_calendar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_alignParentBottom="true"/>
            <LinearLayout
                android:id="@+id/content_txt_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_light"
                android:layout_above="@+id/separator_calendar">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calendar"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:padding="5dp"/>
            </LinearLayout>
            <View
                android:id="@+id/btn_calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_selector" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/contact"
                android:scaleType="centerCrop"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_above="@+id/content_txt_contact"/>
            <View
                android:id="@+id/separator_contact"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_alignParentBottom="true"/>
            <LinearLayout
                android:id="@+id/content_txt_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_light"
                android:layout_above="@+id/separator_contact">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:padding="5dp"/>
            </LinearLayout>
            <View
                android:id="@+id/btn_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_selector" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/colaborators"
                android:scaleType="centerCrop"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_above="@+id/content_txt_contributors"/>
            <View
                android:id="@+id/separator_contributors"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_alignParentBottom="true"/>
            <LinearLayout
                android:id="@+id/content_txt_contributors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_light"
                android:layout_above="@+id/separator_contributors">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contributors"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:padding="5dp"/>
            </LinearLayout>
            <View
                android:id="@+id/btn_colaborators"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_selector" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>